--- a/nw/nwconfig.conf
+++ b/nw/nwconfig.conf
@@ -1,2 +1,15 @@
-[cowmesh]
+[defaults]
+iface=eth2
+context=local
+protocol=ip
 
+[local]
+display_name=MAA
+uuid=1279bfce-0f19-4015-a0ee-5805ab3f6f16
+status_uri=:8080/nw/status
+
+[cowmesh]
+display_name=MAA - Mojolab Analytical Appliance
+
+[localmesh]
+display_name=maa
