--- a/nw/nwconfig.conf
+++ b/nw/nwconfig.conf
@@ -1,15 +1,15 @@
 [defaults]
-iface=eth2
+iface=eth0
 context=local
 protocol=ip
 
 [local]
-display_name=MAA
-uuid=1279bfce-0f19-4015-a0ee-5805ab3f6f16
+display_name=somename
+uuid: someuuid
 status_uri=:8080/nw/status
 
 [cowmesh]
-display_name=MAA - Mojolab Analytical Appliance
+display_name=aa
 
 [localmesh]
-display_name=maa
+display_name=bb
