--- a/nw/nwconfig.conf
+++ b/nw/nwconfig.conf
@@ -1,15 +1,16 @@
 [defaults]
-iface=eth0
+iface=eth2
 context=local
 protocol=ip
+status_uri=http://<ADDR>:8080/nw/status
 
 [local]
-display_name=somename
-uuid: someuuid
-status_uri=:8080/nw/status
+display_name=MAA
+uuid=1279bfce-0f19-4015-a0ee-5805ab3f6f16
+status_uri=http://<ADDR>:8080/nw/status
 
 [cowmesh]
-display_name=aa
+display_name=MAA - Mojolab Analytical Appliance
 
 [localmesh]
-display_name=bb
+display_name=maa
